--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
   <div class="conteiner">
-    <img src="../images/image-qr-code.png" alt="qrcode">
+    <img src="images/image-qr-code.png" alt="qrcode">
     <h1> Improve your front-end skills by building projects</h1>
     <p>Scan the QR code to visit Frontend Mentor and take ypur coding skills to the next level.</p>
   </div>
